--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,7 @@
 }
 .items li img {
   width: 100%;
+  transition: all 0.2s linear, 1s;
 }
 .items .item {
   position: relative;
@@ -221,4 +222,132 @@
   background-color: #e74c3c;
   position: relative;
   display: inline-block;
+  transition: all 0.2s linear, 0.3s;
+}
+
+.items .imageOverlay {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  transition: all 0.2s linear, 1s;
+}
+
+.items .item:hover .imageOverlay {
+  opacity: 1;
+}
+
+.items .openButton {
+  float: left;
+  left: -200px;
+}
+
+.items .projectLink {
+  float: right;
+  right: -200px;
+}
+.items .item:hover .openButton {
+  left: 0px;
+}
+
+.items .item:hover .projectLink {
+  right: 0px;
+}
+.items .item:hover img {
+  transform: scale(1.05, 1.05);
+}
+.items {
+  padding: 0;
+}
+
+.copyrightSection {
+  background-color: #000;
+  color: #fff;
+  padding: 30px 5px;
+}
+.copyrightSection p {
+  margin: 0;
+}
+
+#navigation {
+  background-color: #e74c3c;
+  padding: 20px 10px;
+  z-index: 100;
+  width: 100%;
+}
+#navigation li {
+  padding: 0 10px;
+}
+#navigation li a {
+  color: #fff;
+}
+
+.navbar-brand,
+.navbar-brand:hover {
+  color: #fff;
+}
+.navbar-toggler-icon {
+  background: url(../img/icons/menu.png);
+  background-size: 100%;
+}
+.fixedNav #navigation {
+  position: fixed;
+  top: 0;
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  bottom: #fff;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+}
+.loader .inner {
+  width: 100%;
+  height: 100%;
+  background: url(../img/loader.gif) center center no-repeat;
+  background-color: #fff;
+}
+
+.footer {
+  background-color: #000;
+  padding: 80px 0;
+}
+.footer__social {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 80px;
+}
+.footer__link {
+  color: #fff;
+  font-size: 48px;
+  display: inline-block;
+  transition: all 0.3s ease-in-out;
+}
+.footer__link:hover {
+  opacity: 0.7;
+}
+.footer-copyright {
+  color: #ccc;
+  text-align: center;
+  font-size: 15px;
+}
+
+@media (max-width: 640px) {
+  .footer__social {
+    margin-bottom: 48rem;
+  }
+  .footer__link {
+    font-size: 2.5rem;
+  }
+  .footer__copyright {
+    font-size: 1.5rem;
+  }
 }
